--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,9 +7,9 @@ services:
     environment:
       POSTGRES_DB: ecommerce
       POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: password
+      POSTGRES_PASSWORD: microTUSH77
     ports:
-      - "5432:5432"
+      - "5433:5433"
     volumes:
       - postgres_data:/var/lib/postgresql/data
     healthcheck:
@@ -22,17 +22,25 @@ services:
     build: .
     container_name: ecommerce-app
     ports:
-      - "8080:8080"
+      - "8181:8181"
     environment:
       - DB_HOST=postgres
       - DB_PORT=5432
       - DB_USER=postgres
-      - DB_PASSWORD=password
+      - DB_PASSWORD=microTUSH77
       - DB_NAME=ecommerce
-      - PORT=8080
+      - PORT=8181
+      - OIDC_PROVIDER_URL=https://modest-cori-rk4ib6mfzq.projects.oryapis.com
+      - OIDC_CLIENT_ID=de6aaa18-aafc-4ddc-89d1-730dc9065039
+      - OIDC_CLIENT_SECRET=aHoSV4tgCJ9HHA7xNUXKpCVbCe
+      - OIDC_REDIRECT_URL=http://localhost:8181/api/auth/callback
       - AFRICASTALKING_API_KEY=sandbox
       - AFRICASTALKING_USERNAME=sandbox
       - AFRICASTALKING_BASE_URL=https://api.sandbox.africastalking.com
+      - SMTP_HOST=smtp.gmail.com
+      - SMTP_PORT=587
+      - SMTP_USERNAME=your_email@gmail.com
+      - SMTP_PASSWORD=your_app_password
       - ADMIN_EMAIL=admin@ecommerce.com
     depends_on:
       postgres:
