--- a/deployments/app-deployment.yaml
+++ b/deployments/app-deployment.yaml
@@ -1,3 +1,23 @@
+apiVersion: v1
+kind: Secret
+metadata:
+  name: ecommerce-app-secrets
+type: Opaque
+data:
+  OIDC_PROVIDER_URL: aHR0cHM6Ly9tb2Rlc3QtY29yaS1yazRpYjZtZnpxLnByb2plY3RzLm9yeWFwaXMuY29t
+  OIDC_CLIENT_ID: ZGU2YWFhMTgtYWFmYy00ZGRjLTg5ZDEtNzMwZGM5MDY1MDM5
+  OIDC_CLIENT_SECRET: YUhvU1Y0dGdDSjlISEE3eE5VWEtwQ1ZiQ2U=
+  OIDC_REDIRECT_URI: aHR0cDovL2xvY2FsaG9zdDo4MTgxL2FwaS9hdXRoL2NhbGxiYWNr
+  AFRICASTALKING_USERNAME: c2FuZGJveA==
+  AFRICASTALKING_API_KEY: YXRza185OGEyNDdlNTAyNTQ0MmFjMjU5NzU3ZGU1MGVlYWY1OWIzYjlhMTQ2YmIxMDcxZjdiZGU3NzQzNjM0ODcxYWI2ODQxNjRiNTM=
+  AFRICASTALKING_RECIPIENT: KzI1NDcwNzY0OTMxMQ==
+  AFRICASTALKING_SENDER_ID: QVRFQ09NWTIwMjU=
+  SMTP_HOST: QVRFQ09NWTIwMjU=
+  SMTP_PORT: NTg3
+  SMTP_USERNAME: ZXJvdHVzaDc3QGdtYWlsLmNvbQ==
+  SMTP_PASSWORD: eXJqZiBqanRkIHBkY2Mgc252Yg==
+  ADMIN_EMAIL: aW5mb0BlcmljLW11dHVhLnNpdGU=
+---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -51,13 +71,72 @@ spec:
                   key: POSTGRES_DB
             # Add OIDC configuration (you'll need to set these)
             - name: OIDC_PROVIDER_URL
-              value: "https://accounts.google.com"
+              valueFrom:
+                secretKeyRef:
+                  name: ecommerce-app-secrets
+                  key: OIDC_PROVIDER_URL
             - name: OIDC_CLIENT_ID
-              value: "your-client-id"
+              valueFrom:
+                secretKeyRef:
+                  name: ecommerce-app-secrets
+                  key: OIDC_CLIENT_ID
             - name: OIDC_CLIENT_SECRET
-              value: "your-client-secret"
+              valueFrom:
+                secretKeyRef:
+                  name: ecommerce-app-secrets
+                  key: OIDC_CLIENT_SECRET
             - name: OIDC_REDIRECT_URL
-              value: "http://localhost:8080/api/auth/callback"
+              valueFrom:
+                secretKeyRef:
+                  name: ecommerce-app-secrets
+                  key: OIDC_REDIRECT_URL
+            # Africa's Talking Environment Variables
+            - name: AFRICA_TALKING_API_KEY
+              valueFrom:
+                secretKeyRef:
+                  name: ecommerce-app-secrets
+                  key: AFRICA_TALKING_API_KEY
+            - name: AFRICA_TALKING_USERNAME
+              valueFrom:
+                secretKeyRef:
+                  name: ecommerce-app-secrets
+                  key: AFRICA_TALKING_USERNAME
+            - name: AFRICA_TALKING_SENDER_ID
+              valueFrom:
+                secretKeyRef:
+                  name: ecommerce-app-secrets
+                  key: AFRICA_TALKING_SENDER_ID
+            - name: AFRICA_TALKING_RECIPIENT_ID
+              valueFrom:
+                secretKeyRef:
+                  name: ecommerce-app-secrets
+                  key: AFRICA_TALKING_RECIPIENT_ID
+            # SMTP Environment Variables
+            - name: SMTP_HOST
+              valueFrom:
+                secretKeyRef:
+                  name: ecommerce-app-secrets
+                  key: SMTP_HOST
+            - name: SMTP_PORT
+              valueFrom:
+                secretKeyRef:
+                  name: ecommerce-app-secrets
+                  key: SMTP_PORT
+            - name: SMTP_USERNAME
+              valueFrom:
+                secretKeyRef:
+                  name: ecommerce-app-secrets
+                  key: SMTP_USERNAME
+            - name: SMTP_PASSWORD
+              valueFrom:
+                secretKeyRef:
+                  name: ecommerce-app-secrets
+                  key: SMTP_PASSWORD
+            - name: ADMIN_EMAIL
+              valueFrom:
+                secretKeyRef:
+                  name: ecommerce-app-secrets
+                  key: ADMIN_EMAIL
           readinessProbe:
             httpGet:
               path: /health
