--- a/deployments/app-deployment.yaml
+++ b/deployments/app-deployment.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: ecommerce-app-secrets
+  namespace: ecommerce-app
 type: Opaque
 data:
   OIDC_PROVIDER_URL: aHR0cHM6Ly9tb2Rlc3QtY29yaS1yazRpYjZtZnpxLnByb2plY3RzLm9yeWFwaXMuY29t
