--- a/.github/workflows/deploy-vps.yml
+++ b/.github/workflows/deploy-vps.yml
@@ -27,7 +27,7 @@ jobs:
       postgres:
         image: postgres:15
         env:
-          POSTGRES_PASSWORD: password
+          POSTGRES_PASSWORD: ${{ secrets.POSTGRES_PASSWORD }}
           POSTGRES_USER: postgres
           POSTGRES_DB: ecommerce_test
         options: >-
@@ -63,7 +63,7 @@ jobs:
           DB_HOST: localhost
           DB_PORT: 5432
           DB_USER: postgres
-          DB_PASSWORD: password
+          DB_PASSWORD: ${{ secrets.POSTGRES_PASSWORD }}
           DB_NAME: ecommerce_test
         run: go test -v ./...
 
