--- a/deployments/app-deployment.yaml
+++ b/deployments/app-deployment.yaml
@@ -8,7 +8,7 @@ data:
   OIDC_PROVIDER_URL: aHR0cHM6Ly9tb2Rlc3QtY29yaS1yazRpYjZtZnpxLnByb2plY3RzLm9yeWFwaXMuY29t
   OIDC_CLIENT_ID: ZGU2YWFhMTgtYWFmYy00ZGRjLTg5ZDEtNzMwZGM5MDY1MDM5
   OIDC_CLIENT_SECRET: YUhvU1Y0dGdDSjlISEE3eE5VWEtwQ1ZiQ2U=
-  OIDC_REDIRECT_URI: aHR0cDovL2xvY2FsaG9zdDo4MTgxL2FwaS9hdXRoL2NhbGxiYWNr
+  OIDC_REDIRECT_URL: aHR0cDovL2xvY2FsaG9zdDo4MTgxL2FwaS9hdXRoL2NhbGxiYWNr
   AFRICASTALKING_USERNAME: c2FuZGJveA==
   AFRICASTALKING_API_KEY: YXRza185OGEyNDdlNTAyNTQ0MmFjMjU5NzU3ZGU1MGVlYWY1OWIzYjlhMTQ2YmIxMDcxZjdiZGU3NzQzNjM0ODcxYWI2ODQxNjRiNTM=
   AFRICASTALKING_RECIPIENT: KzI1NDcwNzY0OTMxMQ==
@@ -86,32 +86,32 @@ spec:
                 secretKeyRef:
                   name: ecommerce-app-secrets
                   key: OIDC_CLIENT_SECRET
-            - name: OIDC_REDIRECT_URI
+            - name: OIDC_REDIRECT_URL
               valueFrom:
                 secretKeyRef:
                   name: ecommerce-app-secrets
-                  key: OIDC_REDIRECT_URI
+                  key: OIDC_REDIRECT_URL
             # Africa's Talking Environment Variables
-            - name: AFRICA_TALKING_API_KEY
+            - name: AFRICASTALKING_API_KEY
               valueFrom:
                 secretKeyRef:
                   name: ecommerce-app-secrets
-                  key: AFRICA_TALKING_API_KEY
-            - name: AFRICA_TALKING_USERNAME
+                  key: AFRICASTALKING_API_KEY
+            - name: AFRICASTALKING_USERNAME
               valueFrom:
                 secretKeyRef:
                   name: ecommerce-app-secrets
-                  key: AFRICA_TALKING_USERNAME
-            - name: AFRICA_TALKING_SENDER_ID
+                  key: AFRICASTALKING_USERNAME
+            - name: AFRICASTALKING_SENDER_ID
               valueFrom:
                 secretKeyRef:
                   name: ecommerce-app-secrets
-                  key: AFRICA_TALKING_SENDER_ID
-            - name: AFRICA_TALKING_RECIPIENT_ID
+                  key: AFRICASTALKING_SENDER_ID
+            - name: AFRICASTALKING_RECIPIENT
               valueFrom:
                 secretKeyRef:
                   name: ecommerce-app-secrets
-                  key: AFRICA_TALKING_RECIPIENT_ID
+                  key: AFRICASTALKING_RECIPIENT
             # SMTP Environment Variables
             - name: SMTP_HOST
               valueFrom:
