--- a/.github/workflows/deploy-vps.yml
+++ b/.github/workflows/deploy-vps.yml
@@ -31,6 +31,7 @@ jobs:
           POSTGRES_USER: postgres
           POSTGRES_DB: ecommerce_test
         options: >-
+          --tmpfs /var/lib/postgresql/data:rw
           --health-cmd pg_isready
           --health-interval 10s
           --health-timeout 5s
