Updated SMTP_HOST env variable in app-deployment.yaml

--- a/deployments/app-deployment.yaml
+++ b/deployments/app-deployment.yaml
@@ -13,7 +13,7 @@ data:
   AFRICASTALKING_API_KEY: YXRza185OGEyNDdlNTAyNTQ0MmFjMjU5NzU3ZGU1MGVlYWY1OWIzYjlhMTQ2YmIxMDcxZjdiZGU3NzQzNjM0ODcxYWI2ODQxNjRiNTM=
   AFRICASTALKING_RECIPIENT: KzI1NDcwNzY0OTMxMQ==
   AFRICASTALKING_SENDER_ID: QVRFQ09NWTIwMjU=
-  SMTP_HOST: QVRFQ09NWTIwMjU=
+  SMTP_HOST: c210cC5nbWFpbC5jb20=
   SMTP_PORT: NTg3
   SMTP_USERNAME: ZXJvdHVzaDc3QGdtYWlsLmNvbQ==
   SMTP_PASSWORD: eXJqZiBqanRkIHBkY2Mgc252Yg==
