--- a/.github/workflows/deploy-vps.yml
+++ b/.github/workflows/deploy-vps.yml
@@ -66,7 +66,7 @@ jobs:
           DB_USER: postgres
           DB_PASSWORD: ${{ secrets.POSTGRES_PASSWORD }}
           DB_NAME: ecommerce_test
-        run: go test -v ./...
+        run: go test -v ./tests
 
   build:
     needs: test
