--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -59,7 +59,7 @@ jobs:
       - name: Install dependencies
         run: go mod download
 
-      - name: Run tests
+      - name: Run API Tests
         env:
           DB_HOST: localhost
           DB_PORT: 5432
@@ -67,6 +67,24 @@ jobs:
           DB_PASSWORD: ${{ secrets.POSTGRES_PASSWORD }}
           DB_NAME: ecommerce_test
         run: go test ./tests -v --run '(TestCustomerRoutes|TestCategoryRoutes|TestProductRoutes|TestOrderRoutes)'
+
+      - name: Run Auth Tests
+        env:
+          DB_HOST: localhost
+          DB_PORT: 5432
+          DB_USER: postgres
+          DB_PASSWORD: ${{ secrets.POSTGRES_PASSWORD }}
+          DB_NAME: ecommerce_test
+        run: go test ./tests -v --run '(TestValidateToken|TestGenerateToken|TestExtractTokenFromHeader|TestExtractTokenFromHeader_NoHeader|TestExtractTokenFromHeader_InvalidFormat)'
+
+      - name: Run OIDC Tests
+        env:
+          DB_HOST: localhost
+          DB_PORT: 5432
+          DB_USER: postgres
+          DB_PASSWORD: ${{ secrets.POSTGRES_PASSWORD }}
+          DB_NAME: ecommerce_test
+        run: go test ./tests -v --run '(TestOIDCConfig|TestRandomStringGeneration|TestOIDCClaims|TestUserInfo)'
 
   build:
     needs: test
