--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -1,19 +1,8 @@
 name: Deploy to VPS with Minikube
 
 on:
-  push:
-    branches: [master, dev]
-
-  workflow_dispatch:
-    inputs:
-      environment:
-        description: "Environment to deploy to"
-        required: true
-        default: "staging"
-        type: choice
-        options:
-          - staging
-          - production
+  pull_request:
+    branches: [master]
 
 env:
   IMAGE_NAME: ecommerce-app
@@ -109,11 +98,10 @@ jobs:
           push: true
           tags: ${{ secrets.DOCKER_USERNAME }}/ecommerce-app:latest
 
-  deploy-staging:
+  deploy:
     needs: build
     runs-on: ubuntu-latest
-    if: github.ref == 'refs/heads/dev' || (github.event_name == 'workflow_dispatch' && github.event.inputs.environment == 'staging')
-    environment: staging
+    if: github.ref == 'refs/heads/master' || github.event_name == 'workflow_dispatch'
 
     steps:
       - name: Checkout code
@@ -156,60 +144,6 @@ jobs:
             export IMAGE_NAME=ecommerce-app
             export IMAGE_TAG=${{ github.sha }}
             export ENVIRONMENT=staging
-            export VPS_DOMAIN=${{ secrets.VPS_DOMAIN }}
-
-            # Run deployment script
-            chmod +x scripts/deploy-vps.sh
-            ./scripts/deploy-vps.sh
-          EOF
-
-  deploy-production:
-    needs: build
-    runs-on: ubuntu-latest
-    if: github.ref == 'refs/heads/master' || (github.event_name == 'workflow_dispatch' && github.event.inputs.environment == 'production')
-    environment: production
-
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Setup SSH key
-        uses: webfactory/ssh-agent@v0.8.0
-        with:
-          ssh-private-key: ${{ secrets.VPS_SSH_KEY_PROD }}
-
-      - name: Add VPS to known hosts
-        run: |
-          ssh-keyscan -H ${{ secrets.VPS_HOST_PROD }} >> ~/.ssh/known_hosts
-
-      - name: Deploy to Production VPS
-        run: |
-          ssh ${{ secrets.VPS_USER_PROD }}@${{ secrets.VPS_HOST_PROD }} << 'EOF'
-            set -e
-
-            echo "🚀 Starting deployment to production..."
-
-            # Navigate to app directory
-            cd /home/${{ secrets.VPS_USER_PROD }}/commerce-app || {
-              echo "Creating app directory..."
-              mkdir -p /home/${{ secrets.VPS_USER_PROD }}/commerce-app
-              cd /home/${{ secrets.VPS_USER_PROD }}/commerce-app
-            }
-
-            # Pull latest code
-            if [ -d ".git" ]; then
-              echo "📥 Pulling latest changes..."
-              git fetch origin
-              git reset --hard origin/master
-            else
-              echo "📥 Cloning repository..."
-              git clone -b master ${{ github.server_url }}/${{ github.repository }} .
-            fi
-
-            # Set environment variables
-            export IMAGE_NAME=ecommerce-app
-            export IMAGE_TAG=${{ github.sha }}
-            export ENVIRONMENT=production
             export VPS_DOMAIN=${{ secrets.VPS_DOMAIN }}
 
             # Run deployment script
