--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -1,4 +1,4 @@
-name: Deploy to VPS with Minikube
+name: Deploy to AWS with Minikube
 
 on:
   pull_request:
@@ -143,7 +143,7 @@ jobs:
             # Set environment variables
             export IMAGE_NAME=ecommerce-app
             export IMAGE_TAG=${{ github.sha }}
-            export ENVIRONMENT=staging
+            export ENVIRONMENT=production
             export VPS_DOMAIN=${{ secrets.VPS_DOMAIN }}
 
             # Run deployment script
@@ -152,7 +152,7 @@ jobs:
           EOF
 
   notify:
-    needs: [deploy-staging, deploy-production]
+    needs: [deploy]
     runs-on: ubuntu-latest
     if: always()
 
